syntax = "proto3";

import "google/protobuf/empty.proto";
package pb;

option go_package = "/pb";

service LocationService {
  rpc AddObject (Object) returns (ObjectID) {}
  rpc GetObject (ObjectID) returns (Object) {}
  rpc DeleteObject (ObjectID) returns (google.protobuf.Empty) {}
  rpc ListObjects (google.protobuf.Empty) returns (ObjectList) {}
  rpc CalculateDistance (DistanceRequest) returns (DistanceResponse) {}
}

message Object {
  string id = 1;
  string name = 2;
  double latitude = 3;
  double longitude = 4;
}

message ObjectID {
  string id = 1;
}

message UpdateObjectRequest {
  string id = 1;
  double latitude = 2;
  double longitude = 3;
}

message ObjectList {
  repeated Object objects = 1;
}

message DistanceRequest {
  string objectId = 1;
  double latitude = 2;
  double longitude = 3;
}

message DistanceResponse {
  double distance = 1;
}

